Mutlithreading within transactional stuff causes problems in this case here, at least I think it is the issue here at hand.